添加server tag的功能
