# lib/db/api.js
@@ -57,14 +57,15 @@ dbapi.setUserTags = function(email,tags){
   }))
 }
 
-// @chenhao loadUserList
+// @chenhao loadProviderList
 dbapi.loadServerList = function(){
-  return db.run(r.table('devices'))
+  return db.run(r.table('providers'))
 }
 
-// @chenhao setUserTag
-dbapi.updateUserTag = function(email,tags){
-  return db.run(r.table('devices').get(email).update({
+// @chenhao
+dbapi.setServerTags = function(name,note,tags){
+  return db.run(r.table('providers').get(name).update({
+    note: note,
     tags: tags
   }))
 }
@@ -179,6 +180,15 @@ dbapi.saveDeviceInitialState = function(serial, device) {
   , remoteConnectUrl: null
   , usage: null
   }
+  var provider_name = device.provider.name
+  //@chenhao 存储provider的信息
+  db.run(r.table('providers').get(provider_name))
+    .then(function(stats) {
+        if (!stats){
+          return db.run(r.table('providers').insert({'name':provider_name,'time':r.now()}))
+        }
+    })
+
   return db.run(r.table('devices').get(serial).update(data))
     .then(function(stats) {
       if (stats.skipped) {
